001-sign up responsive

--- a/001-signup/index.html
+++ b/001-signup/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,900" rel="stylesheet">
         <script src="https://use.fontawesome.com/5d2adeb81b.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <div class="parent-div">
