--- a/008-404_page/index.html
+++ b/008-404_page/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
         <title>404 Page</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <h1>4</h1>
-            <img src="logo-larger.svg" alt="icon" />
+            <img src="logo-larger.svg" alt="icon" class="icon"/>
             <h1>4</h1>
             <h2>Sorry, Somebody already ate here!</h2>
             <p>The page you were looking for doesn't exist.</p>
