CC checkout responsive

--- a/002-CC_checkout/index.html
+++ b/002-CC_checkout/index.html
@@ -11,32 +11,32 @@
     </head>
     <body>
         <div class="row">
-            <div class="col s4 total">
-                <h5><i class="material-icons">keyboard_arrow_left</i> Return to cart</h5>
+            <div class="col s12 l4 total">
+                <h5><a href="#"><i class="material-icons">keyboard_arrow_left</i> Return to cart</a></h5>
                 <div class="total-amount">
                     <p class="tex-flow">Total</p>
                     <h2>$159.95</h2>
                 </div>
             </div>
-            <div class="col s8 details">
+            <div class="col s12 l8 details">
                 <div class="details-container">
                     <h2>Credit Card Details</h2>
                     <div class="row">
                         <form class="col s12">
                             <div class="row">
-                                <div class="input-field col s5">
+                                <div class="input-field col s6 l5">
                                     <input value="Sarah Green" id="full_name" type="text" class="validate">
                                     <label class="active" for="full_name">NAME ON CARD</label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="input-field col s5">
+                                <div class="input-field col s6 l5">
                                     <input value="**** **** **** 1034" id="card_number" type="text" class="validate">
                                     <label class="active" for="card_number">CARD NUMBER</label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="input-field col s4">
+                                <div class="input-field col s6 l4">
                                     <select>
                                         <option value="" disabled >Month</option>
                                         <option value="1">January</option>
@@ -54,7 +54,7 @@
                                     </select>
                                   <label>EXPIRATION DATE</label>
                                 </div>
-                                <div class="input-field col s2">
+                                <div class="input-field col s3 l2">
                                     <select>
                                         <option value="" disabled >Year</option>
                                         <option value="13">2017</option>
@@ -62,7 +62,7 @@
                                         <option value="15">2019</option>
                                     </select>
                                 </div>
-                                <div class="input-field col s2">
+                                <div class="input-field col s3 l2">
                                     <input value="123" id="first_name" type="text" class="validate">
                                     <label for="first_name">CCV</label>
                                 </div>
